<resources>
    <string name="app_name">Bmi Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="header">Fill your personal data</string>
    <string name="height">Height in cm</string>
    <string name="weight">Weight in kg</string>
    <string name="button">Show results</string>
    <string name="man_label">Man</string>
    <string name="woman_label">Woman</string>
    <string name="age">Age</string>
    <string name="bmi_header">Your bmi is:</string>
    <string name="metabolism_header">Recommended calories for you :</string>
    <string name="recommendations_header">Recommended dish for you:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_health">Personal Health</string>
    <string name="quiz">Quiz Covid-19</string>
    <string name="chart">Charts Covid-19</string>
    <string name="title_activity_bmi">BmiActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="quiz_question">TextView</string>
    <string name="answer3" />
    <string name="answer4" />
    <string name="answer1" />
    <string name="answer2" />
    <string name="question" />
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_activity_chart">ChartActivity</string>
</resources>
